@@ -53,12 +53,13 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
+
 
 			if (ImGui::DragFloat(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -151,12 +152,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragFloat2(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -249,12 +250,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragFloat3(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -347,12 +348,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragFloat4(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -446,12 +447,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragInt(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -545,12 +546,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragInt2(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -644,12 +645,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragInt3(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
@@ -743,12 +744,12 @@ namespace Marvel {
 				ImGui::PushStyleColor(ImGuiCol_FrameBgActive, disabled_color);
 				ImGui::PushStyleColor(ImGuiCol_Button, disabled_color);
 				m_disabled_value = *m_value;
-				m_flags |= ImGuiInputTextFlags_ReadOnly;
+				m_flags |= ImGuiSliderFlags_NoInput;
 			}
-			else m_flags &= ~ImGuiInputTextFlags_ReadOnly;
+			else m_flags &= ~ImGuiSliderFlags_NoInput;
 
 			if (ImGui::DragInt4(m_label.c_str(), m_enabled ? m_value : &m_disabled_value, m_speed, m_min, m_max, m_format.c_str(), m_flags))
-				mvApp::GetApp()->runCallback(m_callback, m_name, m_callbackData);
+				mvApp::GetApp()->runCallback(getCallback(false), m_name, m_callbackData);
 
 			// Regular Tooltip (simple)
 			if (!getTip().empty() && ImGui::IsItemHovered())
